Remove fixed header height on mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -136,12 +136,6 @@ footer .social-icon > img {
     }
 }
 
-@media (aspect-ratio <= 2 / 3) {
-    header {
-        height: 4rem;
-    }
-}
-
 @media (width <= 70rem) {
     header {
         flex-wrap: wrap;
